--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+    <section class="panel">
+        <div class="panel__item">
+            <img src="assets//icons/telephone.svg" alt="">
+        </div>
+        <div class="panel__item">
+            <img src="assets/icons/message.svg" alt="">
+        </div>
+        <div class="panel__item">
+            <img src="assets/icons/email.svg" alt="">
+        </div>
+    </section>
     <header class="header" id="header">
         <div class="container">
             <div class="header__container">
@@ -158,7 +169,7 @@
             </div>
             <div class="information__item">
                 <div class="information__quantity">> 500</div>
-                <div class="information__title">индустриальных партнеров </div>
+                <div class="information__title">индустриальных партнеров</div>
                 <div class="information__subtitle">Крупнейших предприятий пищевой и других отраслей
                 </div>
             </div>
